# NanoPol

./: .gitignore  GEMINI.md  LICENSE  README.md  TODO.md  package.json  pnpm-lock.yaml  spec_legacy.md  vite.config.ts
.gemini/: Gemini.md
.github/workflows/: release.yml  windows-debug-build.yml  windows-qa-build.yml
backend/: build_exe.py  main.py  pyproject.toml
backend/devices/: camera_controller.py  camera_controller_old.py  stage_controller.py
backend/tests/: conftest.py
backend/tests/devices/: __init__.py  test_camera_controller.py
backend/tests/mocks/: mock_uc480.py
backend/utils/: logger.py
docs/: 00_architecture.md  01_backend_devices.md  02_backend_server.md  03_frontend_client.md  04_validation_guide.md  05_process_communication.md  06_rust_tauri_guide.md  07_uc480_poc_results.md
spec/: 00_overview.md  01_architecture.md  01_overview.md  02_architecture.md  02_ui_flow.md  03_logic.md  03_ui_flow.md  04_data_management.md  04_logic.md  05_camera_measurement_spec.md  05_data_management.md  05_use_cases.md  06_use_cases.md  07_validation_rules.md  08_manual_control_spec.md  09_data_recording_spec.md  10_dynamic_port_allocation.md  11_camera_measurement_spec.md  12_testing.md
spec/hardware/: 01_gsc01_technical_manual.md  02_dcc1545m_technical_manual.md  02_dcc1645c_technical_manual.md  03_osms60yaw_technical_manual.md  04_dcc1645c_technical_manual.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts
(+13 files in other folders)
