[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pyserial>=3.5",
    "pyueye>=4.96.952",
    "tifffile>=2025.10.16",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
